--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Natalie Forsdick, PhD
 author: Natalie Forsdick
 description: > 
-  Postdoctoral research fellow
+  Conservation Genomics researcher
 baseurl: ""
 
 plugins:
